--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <img src="saf.png" alt="Survey A" class="survey-image"></td>
           <td>
           <!-- Redirect button -->
-          <a href="https://simonwangai17.github.io/lipanampesa/">
+          <a href="https://simonwangai17.github.io/lipanampesa">
             <button>Start</button>
           </a>
           
