--- a/index.html
+++ b/index.html
@@ -27,13 +27,20 @@
   </div>
 
   <!-- User Icon and Dropdown on Right Side -->
-  <div class="navbar-right dropdown">
-    <i class="fa-solid fa-user"></i><span>&#9662;</span>
-    <div class="dropdown-content">
-      <a href="#" onclick="showProfile()">Profile</a>
-      <a href="https://simonwangai17.github.io/jamiitels/" onclick="logout()">Logout</a>
-    </div>
+  <!-- User Icon and Dropdown on Right Side -->
+<div class="navbar-right dropdown">
+  <i class="fa-solid fa-user"></i><span>&#9662;</span>
+  <div class="dropdown-content">
+    <a href="#" onclick="navigateToSection('earning', 'surveys')">Surveys</a>
+    <a href="#" onclick="navigateToSection('earning', 'tokens')">Tokens</a>
+    <a href="#" onclick="navigateToSection('earning', 'referrals')">Referrals</a>
+    <a href="#" onclick="showSection('account')">Profile</a>
+    <a href="#" onclick="showSection('fundsDropdown')">Funds</a>
+    <a href="https://simonwangai17.github.io/regstration/">Add Clients</a>
+    <a href="https://simonwangai17.github.io/jamiitels/" onclick="logout()">Logout</a>
   </div>
+</div>
+
 </div>
 
 
