whatsapp,loader,advert

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 
 </head>
 <body>
+<!-- Loader -->
+<div id="pageLoader">
+  <div class="loader-content">
+    <img src="logo.png" alt="Logo" class="loader-logo">
+    <h2>Welcome to Jamii Investor</h2>
+    <p>Your next financial partner</p>
+  </div>
+</div>
+
   <!-- Navbar -->
 <div class="navbar">
   <!-- Company Logo and Name on Left Side -->
@@ -25,6 +34,15 @@
     <button onclick="showSection('earning')">Earning</button>
     <button onclick="showSection('account')">Account</button>
   </div>
+  <!-- Sweet Popup Message -->
+<div id="sweetPopup" class="popup">
+  <div class="popup-content">
+    <h2>🎉 Exciting Offer! 🎉</h2>
+    <p>Invite 10 members and earn Ksh 500 plus a bonus of Ksh 200. <br>Start early to earn more!</p>
+    <button onclick="closeSweetPopup()">Got it!</button>
+  </div>
+</div>
+
 
   <!-- User Icon and Dropdown on Right Side -->
   <!-- User Icon and Dropdown on Right Side -->
@@ -261,6 +279,10 @@
       </div>
     </div>
   </div>
+<!-- Floating WhatsApp Button -->
+<a href="https://chat.whatsapp.com/JN3vdkyywsUAuT7pfyl2kE" target="_blank" id="whatsappButton">
+  <img src="whatsapp-icon.png" alt="WhatsApp" class="whatsapp-icon">
+</a>
 
 <!-- Footer -->
 <footer>
