--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
       
       <div id="referrals" class="sub-section">
-        <h4>Your Referral Code: REF-001</h4>
+        <h4>Your Referral Code: REF-</h4>
         <!-- Referred Customers Table -->
 <!-- Referred Customers Table -->
 <table id="referredCustomersTable" border="1" style="width: 100%; border-collapse: collapse; text-align: left;">
@@ -180,21 +180,21 @@
   </thead>
   <tbody>
       <tr>
-          <td style="padding: 10px;">John Doe</td>
-          <td style="padding: 10px;">+123456789</td>
-          <td style="padding: 10px;">REF12345</td>
+          <td style="padding: 10px;">Loren Mwangi</td>
+          <td style="padding: 10px;">0706018491</td>
+          <td style="padding: 10px;">REF146399</td>
           <td style="padding: 10px; text-align: center;">
               <button style="padding: 5px 10px; background-color: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer;" 
-                      onclick="showContactModal('John Doe', '+123456789', 'REF12345')">Contact</button>
+                      onclick="showContactModal('Loren Mwangi', '0706018491', 'RREF146399')">Contact</button>
           </td>
       </tr>
       <tr>
-          <td style="padding: 10px;">Jane Smith</td>
-          <td style="padding: 10px;">+987654321</td>
-          <td style="padding: 10px;">REF67890</td>
+          <td style="padding: 10px;">Simon Wangai</td>
+          <td style="padding: 10px;">0700273841</td>
+          <td style="padding: 10px;">REF146398</td>
           <td style="padding: 10px; text-align: center;">
               <button style="padding: 5px 10px; background-color: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer;" 
-                      onclick="showContactModal('Jane Smith', '+987654321', 'REF67890')">Contact</button>
+                      onclick="showContactModal('Simon Wangai', '0700273841', 'REF146398')">Contact</button>
           </td>
       </tr>
   </tbody>
@@ -291,6 +291,12 @@
         <i class="fas fa-envelope"></i> 
         
         <a href="mailto:jamiiagencies@gmail.com?subject=Inquiry%20from%20Website">jamiiagencies@gmail.com</a>
+      </p>
+      <p>
+        <i class="fab fa-whatsapp"></i> 
+        <a href="https://chat.whatsapp.com/JN3vdkyywsUAuT7pfyl2kE" target="_blank">
+          WhatsApp Us
+        </a>
       </p>
     </div>
 
