--- a/index.html
+++ b/index.html
@@ -78,9 +78,14 @@
         <tbody id="leadList">
           <!-- Dummy data -->
           <tr>
-            <td>Loren Mwangi</td>
-            <td>Loren1</td>
+            <td>Joyce Njeri</td>
+            <td>Joyce1</td>
             <td><button onclick="showPaymentInstructions()">Activate</button></td>
+          </tr>
+          <tr>
+            <td>Loren Mwangi</td>
+            <td>Swolf</td>
+            <td style="color: green;">Active</td>
           </tr>
           <tr>
             <td>Simon Wangai</td>
