updating the link to token page

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div id="earning" class="section">
       <div class="nav-buttons-section">
         <button onclick="showEarningSection('surveys')">Surveys</button>
-        <button onclick="showEarningSection('tokens')">Tokens</button>
+        <button onclick="window.location.href='https://simonwangai17.github.io/token/'">Tokens</button>
         <button onclick="showEarningSection('referrals')">Referrals</button>
       </div>
 
