--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <thead>
             <tr>
               <th>Survey Name</th>
-              <th>Payout</th>
+              <th>Survey Payout</th>
               <th>Status</th>
               <th>Survey Image</th>  <!-- New Column for Image -->
             </tr>
