--- a/index.html
+++ b/index.html
@@ -163,6 +163,18 @@
                     <button>Start</button>
                   </a>
                 </td>
+            </tr> <tr>
+              <td>Non-Alcoholic Beverages</td>
+              <td>Ksh 15</td>
+              <td><span>Available</span></td>
+              <td><img src="bev.jpeg" alt="Survey C" class="survey-image"></td>
+                <!-- Image for Survey C -->
+                <td>
+                  <!-- Redirect button -->
+                  <a href="https://simonwangai17.github.io/survey1/">
+                    <button>Start</button>
+                  </a>
+                </td>
             </tr>
           </tbody>
         </table>
