--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
     <div id="account" class="section">
       <div class="nav-buttons-section">
         <button onclick="showAccountSection('profile')">Profile</button>
-        <button onclick="showAccountSection('fundsDropdown')">Funds</button>
+        <button onclick="window.location.href='https://simonwangai17.github.io/funds/'">Funds</button>
+
         <button onclick="showAccountSection('addClient')">Add Client</button>
       </div>
 
