--- a/index.html
+++ b/index.html
@@ -198,11 +198,12 @@
 
       <div id="profile" class="sub-section profile-form">
         <h4>Update Profile</h4>
-        <label>Name: <input type="text" placeholder="Enter your name"></label>
-        <label>Username: <input type="text" placeholder="Enter your username"></label>
-        <label>Email: <input type="email" placeholder="Enter your email"></label>
-        <label>Phone: <input type="tel" placeholder="Enter your phone"></label>
-        <button onclick="requestProfileUpdate()">Update</button>
+        <p style="color: red; font-weight: bold;">
+          To update your profile, please contact the admin at 
+          <a href="mailto:jamiiagencies@gmail.com?subject=Profile%20Update%20Request">jamiiagencies@gmail.com</a> 
+          or call 
+          <a href="tel:+254791665923">+254791665923</a>.
+        </p>
       </div>
 <!-- Funds section -->
       <div id="fundsDropdown" class="sub-section" style="display: none;">
