--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
         <h4>Update Profile</h4>
         <p style="color: red; font-weight: bold;">
           To update your profile, please contact the admin at 
-          <a href="mailto:jamiiagencies@gmail.com?subject=Profile%20Update%20Request">jamiiagencies@gmail.com</a> 
+          <a href="mailto:jamiiagencies@gmail.com?subject=Profile%20Update%20Request">Mail Us</a> 
           or call 
-          <a href="tel:+254791665923">+254791665923</a>.
+          <a href="tel:+254791665923">Call Us</a>.
         </p>
       </div>
 <!-- Funds section -->
